--- a/index.html
+++ b/index.html
@@ -2,48 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
+  <div class="wrapper">
+    <article class="card">
+      <div class="card__top">
+        <h2 class="card__top-heading">Join our community</h2>
+        <h3 class="card__heading card__heading--green">30-day, hassle-free money back guarantee</h3>
+        <p class="card__paragraph card__paragraph--dark">
+          Gain access to our full library of tutorials along with expert code reviews.<br>
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
+      <div class="card__left">
+        <h3 class="card__heading">Monthly Subscription</h3>
+        <p class="card__pricing">
+          <span class="card__paragraph card__paragraph--price">&dollar;29 </span>
+          <span class="card__paragraph card__paragraph--light">per month</span>
+        </p>
+        <p class="card__paragraph">Full access for less than &dollar;1 a day</p>
+        <a href="#" class="btn btn--main">Sign Up</a>
+      </div>
+      <div class="card__right">
+        <h3 class="card__heading">Why Us</h3>
+        <ul class="card__list">
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
+      </div>
+    </article> 
+  </div>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">LB</a>.
     </p>
   </footer>
 </body>
